objects/ServiceAppointment.object
<CustomObject>
    <fields>
        <fullName>AppointmentUrlFormula__c</fullName>
        <description>SE: please change the url of this field to match your community domain name. Replace &lt;yourcommunitydomain&gt; with your actual community domain in both occurrences. The formula should look something like:

if(text($User.UserType)  = &apos;Guest&apos;,
HYPERLINK(&quot;https://sdodemo-main-166ce2cf6b6-172-17bdfda91fe.force.com/professional/s/guestrescheduling?anum=&quot; &amp; AppointmentNumber , &quot;Appointment Link&quot;), 
HYPERLINK(&quot;https://sdodemo-main-166ce2cf6b6-172-17bdfda91fe.force.com/professional/s/serviceappointment/&quot; &amp;  Id  , &quot;Appointment Link&quot;))</description>
        <formula>if(text($User.UserType)  = &apos;Guest&apos;,
HYPERLINK(&quot;https://&lt;yourcommunitydomain&gt;.force.com/professional/s/guestrescheduling?anum=&quot; &amp; AppointmentNumber , &quot;Appointment Link&quot;), 
HYPERLINK(&quot;https://&lt;yourcommunitydomain&gt;.force.com/professional/s/scheduler-appointment?Id=&quot; &amp;  Id  , &quot;Appointment Link&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>&lt;yourcommunitydomain&gt;</inlineHelpText>
        <label>AppointmentUrlFormula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Service Appointments</relationshipLabel>
        <relationshipName>Service_Appointments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customer_NPS__c</fullName>
        <label>Customer NPS</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>FSLDemoTools_AR_Actual_Travel_Time__c</fullName>
        <label>FSLDemoTools AR Actual Travel Time</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSLDemoTools_Service_Resource__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service Resource</label>
        <referenceTo>ServiceResource</referenceTo>
        <relationshipLabel>Service Appointments</relationshipLabel>
        <relationshipName>Service_Appointments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FSLDemoTools_Wave_Data__c</fullName>
        <defaultValue>false</defaultValue>
        <description>this field is used to protect the wave data set from the FSL Demo Tools Restore Utility</description>
        <label>FSLDemoTools Wave Data</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FSLDemoTools_Wave_Week__c</fullName>
        <label>FSLDemoTools Wave Week</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FSL_Compliance__c</fullName>
        <formula>If( ActualEndTime &lt; DueDate , 1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Compliance</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSL_FTFR_Count__c</fullName>
        <description>Sets the value of the field to 0 if status is &apos;Cannot Complete&apos;. This field is used in Service Manager report to calculate First Time Fix Rate value</description>
        <formula>IF(ISPICKVAL(Status,&apos;Cannot Complete&apos;),0,100)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FTFR Count</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <description>added this field to support inbound guest appointment with confirmation email. it gets set by the sdo new inbound guest appointment flow</description>
        <label>First Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LSDemoTools_Master_Data__c</fullName>
        <defaultValue>false</defaultValue>
        <label>LSDemoTools Master Data</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Open_Opportunity_Value__c</fullName>
        <formula>Contact.Account.SDO_Sales_Open_Oppty_Value__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Open Opportunity Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Parent_Work_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Work Order</label>
        <referenceTo>WorkOrder</referenceTo>
        <relationshipLabel>Service Appointments</relationshipLabel>
        <relationshipName>Service_Appointments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Related_Contractor_Appointment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Contractor Appointment</label>
        <referenceTo>ServiceAppointment</referenceTo>
        <relationshipLabel>Service Appointments (Related Contractor Appointment)</relationshipLabel>
        <relationshipName>Related_Contractor_Appointments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Requires_Contractor__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Requires Contractor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Rider_ContactFirstName__c</fullName>
        <description>A reference to the Contact&apos;s First Name</description>
        <formula>Contact.FirstName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>A reference to the Contact&apos;s First Name</inlineHelpText>
        <label>Rider Contact FirstName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rider_ServiceReport_URL__c</fullName>
        <description>URL to public service report</description>
        <inlineHelpText>URL to public service report</inlineHelpText>
        <label>Rider Service Report URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rider_StartTime__c</fullName>
        <label>Rider StartTime</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Running_Late_in_mins__c</fullName>
        <label>Running Late (in mins)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>15</fullName>
                </value>
                <value>
                    <fullName>30</fullName>
                </value>
                <value>
                    <fullName>45</fullName>
                </value>
                <value>
                    <fullName>60</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SDO_SFS_AA_type__c</fullName>
        <description>used for AA LWC work around</description>
        <label>SDO SFS AA type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>EnRoute</fullName>
                </value>
                <value>
                    <fullName>LastMile</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SDO_SFS_Tracker_Resource_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Tracker Assigned Resource Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Service Appointments (Those Assigned to Resource)</relationshipLabel>
        <relationshipName>Service_Appointments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SDO_SFS_Tracker_StartTime__c</fullName>
        <label>Tracker StartTime</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SDO_Tool_FSLDemoTools_Master_Data__c</fullName>
        <defaultValue>false</defaultValue>
        <label>FSLDemoTools Master Data</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SDO_Tool_Service_Crew__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Service Crew</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SchEndDateFormatted__c</fullName>
        <description>Einstein Chatbot formatted field</description>
        <formula>CASE(MONTH(DATEVALUE( SchedEndTime )), 
1, &quot;January&quot;, 
2, &quot;February&quot;, 
3, &quot;March&quot;, 
4, &quot;April&quot;, 
5, &quot;May&quot;, 
6, &quot;June&quot;, 
7, &quot;July&quot;, 
8, &quot;August&quot;, 
9, &quot;September&quot;, 
10, &quot;October&quot;, 
11, &quot;November&quot;, 
12, &quot;December&quot;, 
&quot;None&quot;) 

&amp; &apos; &apos; &amp; 

TEXT(Day(DATEVALUE(SchedEndTime))) 

&amp; &apos;, &apos; &amp; 

TEXT(Year(DATEVALUE(SchedEndTime)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SchEndDateFormatted</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SchEndTimeFormatted__c</fullName>
        <description>Einstein Chatbot formatted field</description>
        <formula>TEXT(IF( OR( VALUE( MID( TEXT( SchedEndTime - (7/24) ), 12, 2 ) ) = 0, VALUE( MID( TEXT( SchedEndTime - (7/24) ), 12, 2 ) ) = 12 ), 12, VALUE( MID( TEXT( SchedEndTime - (7/24) ), 12, 2 ) ) - IF( VALUE( MID( TEXT( SchedEndTime - (7/24) ), 12, 2 ) ) &lt; 12, 0, 12 ) )) 

&amp; &apos;:&apos; &amp; 
Right(&apos;0&apos; &amp; TEXT(VALUE( MID( TEXT( SchedEndTime - (7/24) ), 15, 2 ) )), 2) 

&amp; &apos; &apos; &amp; 
IF( VALUE( MID( TEXT( SchedEndTime - (7/24) ), 12, 2 ) ) &lt; 12, &quot;AM&quot;, &quot;PM&quot; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SchEndTimeFormatted</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SchStartDateFormatted__c</fullName>
        <description>Einstein Chatbot formatted field</description>
        <formula>CASE(MONTH(DATEVALUE(SchedStartTime)), 
1, &quot;January&quot;, 
2, &quot;February&quot;, 
3, &quot;March&quot;, 
4, &quot;April&quot;, 
5, &quot;May&quot;, 
6, &quot;June&quot;, 
7, &quot;July&quot;, 
8, &quot;August&quot;, 
9, &quot;September&quot;, 
10, &quot;October&quot;, 
11, &quot;November&quot;, 
12, &quot;December&quot;, 
&quot;None&quot;) 

&amp; &apos; &apos; &amp; 

TEXT(Day(DATEVALUE(SchedStartTime))) 

&amp; &apos;, &apos; &amp; 

TEXT(Year(DATEVALUE(SchedStartTime)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SchStartDateFormatted</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SchStartTimeFormatted__c</fullName>
        <description>Einstein Chatbot formatted field</description>
        <formula>TEXT(IF( OR( VALUE( MID( TEXT( SchedStartTime - (8/24) ), 12, 2 ) ) = 0, VALUE( MID( TEXT( SchedStartTime - (8/24) ), 12, 2 ) ) = 12 ), 12, VALUE( MID( TEXT( SchedStartTime - (8/24) ), 12, 2 ) ) - IF( VALUE( MID( TEXT( SchedStartTime - (8/24) ), 12, 2 ) ) &lt; 12, 0, 12 ) )) 

&amp; &apos;:&apos; &amp; 
Right(&apos;0&apos; &amp; TEXT(VALUE( MID( TEXT( SchedStartTime - (8/24) ), 15, 2 ) )), 2) 

&amp; &apos; &apos; &amp; 
IF( VALUE( MID( TEXT( SchedStartTime - (8/24) ), 12, 2 ) ) &lt; 12, &quot;AM&quot;, &quot;PM&quot; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SchStartTimeFormatted</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Territory_Name__c</fullName>
        <formula>ServiceTerritory.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Service Territory Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Site_Inspection__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Site Inspection</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Tech_Color__c</fullName>
        <description>This field is used within a custom gantt pallet to identify the service resource the appointment was originally scheduled to before optimization was run. Post optimization it creates a nice visualization of the optimizer at work.</description>
        <label>Tech Color</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Why_Not_Alt1_Candidates__c</fullName>
        <label>Why Not Alt1 Candidates</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Why_Not_Alt1_Count__c</fullName>
        <label>Why Not Alt1 Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Why_Not_Alt2_Candidates__c</fullName>
        <label>Why Not Alt2 Candidates</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Why_Not_Alt2_Count__c</fullName>
        <label>Why Not Alt2 Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Why_Not_Alt3_Candidates__c</fullName>
        <label>Why Not Alt3 Candidates</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Why_Not_Alt3_Count__c</fullName>
        <label>Why Not Alt3 Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Why_Not_Last_Run__c</fullName>
        <label>Why Not Last Run</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Why_Not_Main_Candidates__c</fullName>
        <label>Why Not Main Candidates</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Why_Not_Main_Count__c</fullName>
        <label>Why Not Main Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Why_Not_NoAvail_Candidates__c</fullName>
        <label>Why Not NoAvail Candidates</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Why_Not_NoAvail_Count__c</fullName>
        <label>Why Not NoAvail Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Work_Acceptance_Status__c</fullName>
        <label>Work Acceptance Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Accept</fullName>
                </value>
                <value>
                    <fullName>Reject</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Work_Type_Group_Name__c</fullName>
        <formula>Work_Type_Group__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Chronos Bot Work Type Group Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Work_Type_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Chronos Bot Work Type Group</label>
        <referenceTo>WorkTypeGroup</referenceTo>
        <relationshipLabel>Service Appointments</relationshipLabel>
        <relationshipName>Service_Appointments</relationshipName>
        <type>Lookup</type>
    </fields>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>FSLDemoTools_Master_Data</fullName>
        <active>false</active>
        <errorConditionFormula>SDO_Tool_FSLDemoTools_Master_Data__c</errorConditionFormula>
        <errorDisplayField>AccountId</errorDisplayField>
        <errorMessage>Can&apos;t Edit FSLDemoTools Master Data</errorMessage>
    </validationRules>
</CustomObject>